force-app/main/default/objects/Goodwill__c/Goodwill__c.object-meta.xml
<CustomObject>
    <label>Goodwill</label>
    <nameField>
        <displayFormat>GW-{000000}</displayFormat>
        <label>Goodwill  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goodwills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>