force-app/main/default/objects/Goodwill__c/fields/Credit_Note_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Amount__c</fullName>
    <label>Credit Note Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>