force-app/main/default/objects/Goodwill__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <label>Issue Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>