force-app/main/default/objects/Goodwill__c/fields/Service_Booking__c.field-meta.xml
<CustomField>
    <fullName>Service_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Booking</label>
    <referenceTo>Repair__c</referenceTo>
    <relationshipLabel>Goodwills</relationshipLabel>
    <relationshipName>Goodwills</relationshipName>
    <type>Lookup</type>
</CustomField>