force-app/main/default/objects/Goodwill__c/fields/Solution_Description__c.field-meta.xml
<CustomField>
    <fullName>Solution_Description__c</fullName>
    <label>Solution Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>