force-app/main/default/objects/Goodwill__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Send for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Adjusted</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
            <value>
                <fullName>Sent back to Creator</fullName>
                <isActive>false</isActive>
                <label>Sent back to Creator</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>