force-app/main/default/objects/Goodwill__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Goodwills</relationshipLabel>
    <relationshipName>Goodwills</relationshipName>
    <type>Lookup</type>
</CustomField>