force-app/main/default/objects/Goodwill__c/validationRules/Submit_for_Approval_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Submit_for_Approval_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>(
 TEXT(Stage__c) == &apos;Approved&apos;
||
 TEXT(Stage__c) == &apos;Adjusted&apos;
)
&amp;&amp;
 Is_Approved__c == false</errorConditionFormula>
    <errorMessage>Submit for Approval first.</errorMessage>
</ValidationRule>